# configure

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
configure/: Cargo.toml
configure/src/: lib.rs  null_deserializer.rs  source.rs
configure/src/default/: mod.rs
configure/test-setup/: Cargo.toml
configure/tests/: mixed.rs  with_env_vars.rs  with_toml.rs
configure_derive/: Cargo.toml
configure_derive/src/: attrs.rs  lib.rs
configure_derive/tests/: example.rs
src/: lib.rs  source.rs  value.rs
src/default/: env_deserializer.rs  mod.rs
test-setup/: lib.rs
test-setup/alt-toml/: Cargo.toml
tests/: defaults_only.rs
