[package]
name = "configure"
authors = ["Without Boats <woboats@gmail.com>"]
description = "Configuration management"
documentation = "https://docs.rs/configure"
repository = "https://github.com/withoutboats/configure"
license = "MIT OR Apache-2.0"
version = "0.1.1"

[dependencies]
erased-serde = "0.3.3"
heck = "0.3.0"
serde = "1.0.21"
toml = "0.4.5"

[dependencies.configure_derive]
path = "../configure_derive"
version = "0.1.0"

[dev-dependencies]
serde_derive = "1.0.21"

[dev-dependencies.test-setup]
path = "./test-setup"
version = "0.1.0"
