[package]
authors = ["Without Boats <woboats@gmail.com>"]
name = "configure_derive"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Derives for the configure crate."

[dependencies]
heck = "0.3.0"
quote = "0.3.15"
syn = "0.11.11"

[dev-dependencies]
serde = "1.0.21"
serde_derive = "1.0.21"

[dev-dependencies.configure]
path = "../configure"
version = "0.1.0"

[lib]
proc-macro = true
